@@ -14,7 +14,6 @@ import com.planet_ink.coffee_mud.Commands.interfaces.*;
 import com.planet_ink.coffee_mud.Common.interfaces.*;
 import com.planet_ink.coffee_mud.Exits.interfaces.*;
 import com.planet_ink.coffee_mud.Items.interfaces.*;
-import com.planet_ink.coffee_mud.Items.interfaces.Wand.MagicType;
 import com.planet_ink.coffee_mud.Libraries.interfaces.*;
 import com.planet_ink.coffee_mud.Locales.interfaces.*;
 import com.planet_ink.coffee_mud.MOBS.interfaces.*;
@@ -44,7 +43,7 @@ public class GenStaff extends GenWeapon implements Wand
 	}
 
 	protected String	secretWord	= CMProps.getAnyListFileValue(CMProps.ListFile.MAGIC_WORDS);
-	protected MagicType	enchType	= MagicType.ANY;
+	protected int		enchType	= -1;;
 
 	public GenStaff()
 	{
@@ -85,13 +84,13 @@ public class GenStaff extends GenWeapon implements Wand
 	}
 
 	@Override
-	public MagicType getEnchantType()
+	public int getEnchantType()
 	{
 		return enchType;
 	}
 
 	@Override
-	public void setEnchantType(final MagicType enchType)
+	public void setEnchantType(final int enchType)
 	{
 		this.enchType = enchType;
 	}
@@ -222,7 +221,9 @@ public class GenStaff extends GenWeapon implements Wand
 		switch(getCodeNum(code))
 		{
 		case 0:
-			return "" + this.getEnchantType().name();
+			if((getEnchantType()<0)||(getEnchantType()>=Ability.ACODE_DESCS_.length))
+				return "ANY";
+			return Ability.ACODE_DESCS_[getEnchantType()];
 		default:
 			return CMProps.getStatCodeExtensionValue(getStatCodes(), xtraValues, code);
 		}
@@ -237,7 +238,7 @@ public class GenStaff extends GenWeapon implements Wand
 		switch(getCodeNum(code))
 		{
 		case 0:
-			setEnchantType((Wand.MagicType)CMath.s_valueOf(Wand.MagicType.class, val.toUpperCase().trim()));
+			setEnchantType(CMParms.indexOf(Ability.ACODE_DESCS_, val.toUpperCase().trim()));
 			break;
 		default:
 			CMProps.setStatCodeExtensionValue(getStatCodes(), xtraValues, code, val);
