@@ -3270,6 +3270,27 @@ This skill allows the druid to "shake off" any magical or other \
 affects which may be preventing him or her from \
 speaking and thus chanting.
 
+SKILL_RELICUSE=RELICS
+RELIC_USE=RELICS
+RELICS=\
+Skill    : Relics\n\r\
+Example  : \n\r\
+A magic relic is an holdable item that can be used to create divine magical prayer affects.\n\r\
+\n\r\
+This skill allows one to effectively use a clerical "wand" or "staff"-like relic or scepter.  To \
+invoke a relic, it must first be held.  Then the magic word \
+is spoken to the target.  For instance, if the magic word is \
+`zuy`, you would enter the following to invoke your relic: sayto orc zuy.  Using \
+SAYTO instead of SAY is important because SAY might target the wrong person or \
+thing.  You can also use SAYTO NOBODY <magic word> to make sure you aren't \
+targeting anyone.\n\r\
+\n\r\
+If the prayer on the relic requires extra parameters, then you can include \
+those after the magic words. \
+\n\r\
+Relics generally require a small amount of mana to use, and less if the relic \
+user is capable of learning the prayer cast by the relic.
+
 SKILL_REGIONALAWARENESS=REGIONAL_AWARENESS
 REGIONAL_AWARENESS=<ABILITY>\
 Usage    : REGIONAL\n\r\
@@ -3580,6 +3601,27 @@ Example  : \n\r\
 The thief gains an uncanny ability to sense law enforcement \
 officials in the same room or any adjacent room, even if they \
 are invisible or unseen.  
+
+SKILL_SHARDUSE=SHARDS
+SHARD_USE=SHARDS
+SHARDS=\
+Skill    : Shards\n\r\
+Example  : \n\r\
+A magic shard is an holdable item that can be used to create druidic magical chant affects.\n\r\
+\n\r\
+This skill allows one to effectively use a druidic "wand" or "staff"-like shard or shillelagh.  To \
+invoke a shard, it must first be held.  Then the magic word \
+is spoken to the target.  For instance, if the magic word is \
+`zuy`, you would enter the following to invoke your shard: sayto orc zuy.  Using \
+SAYTO instead of SAY is important because SAY might target the wrong person or \
+thing.  You can also use SAYTO NOBODY <magic word> to make sure you aren't \
+targeting anyone.\n\r\
+\n\r\
+If the chant on the shard requires extra parameters, then you can include \
+those after the casting words. \
+\n\r\
+Shards generally require a small amount of mana to use, and less if the shard \
+user is capable of learning the chant invoked by the crystal shard.
 
 SHIP_LORE=SKILL_SHIPLORE
 SHIPLORE=SKILL_SHIPLORE
@@ -4444,6 +4486,7 @@ The warrior is capable of more crippling blows due to growing up \
 in a culture that encourages sadistic experimentation.  Critical \
 hits scored by this character do considerably more damage than normal.  
 
+SKILL_WANDUSE=WANDS
 WAND_USE=WANDS
 WANDS=\
 Skill    : Wands\n\r\
@@ -4451,7 +4494,7 @@ Available: Almost All\n\r\
 Example  : \n\r\
 A wand is an holdable item that can be used to create magical affects.\n\r\
 \n\r\
-This skill allows one to effectively use a magical wand or staff.  To \
+This skill allows one to effectively use an arcane wand or staff.  To \
 invoke a wand or staff, it must first be held.  Then the magic word \
 is spoken to the target.  For instance, if the magic word is \
 `zuy`, you would enter the following to invoke your wand: sayto orc zuy.  Using \
