@@ -2,6 +2,7 @@
   1. Wands now support enchantment type as a restrictive measure
   2. New PLAYERDEATH option: RETAIN -- to allow player mobs to keep their items on death.
   3. Scriptable GSTAT now supports BASESTRENGTH, BASEDEXTERITY, etc.. and BASEDAMAGE, etc..
+  4. New skills: Shard Use and Relic Use for invoking divine and druidic wands and staffs.
 
 # Build 5.9.9 Release 12/18/2019
   * Minor database change: CMQUESID in CMQUESTS, CMRCID in CMGRAC, CMPKEY in CMPDAT enlarged.  Mostly optional.
